test/instance-checks-8.err.expect
test/instance-checks-8.ktn:1:1: error: cannot solve stack type constraint .s1 t1 t2 = .s2
test/instance-checks-8.ktn:1:1: note: .s2 is from here
test/instance-checks-8.ktn:1:19: note: t1 is from here
test/instance-checks-8.ktn:1:19: note: t2 is from here
test/instance-checks-8.ktn:1:26: note: .s1 is from here
